--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,21 @@ flutter:
 
   assets:
     - assets/flags/
+    - assets/icons/
+
+
+  fonts:
+    - family: SFProDisplay
+      fonts:
+        - asset: fonts/SFProDisplay-Bold.ttf
+        - asset: fonts/SFProDisplay-Heavy.ttf
+        - asset: fonts/SFProDisplay-Light.ttf
+        - asset: fonts/SFProDisplay-Medium.ttf
+        - asset: fonts/SFProDisplay-Regular.ttf
+        - asset: fonts/SFProDisplay-SemiBold.ttf
+        - asset: fonts/SFProDisplay-Thin.ttf
+        - asset: fonts/SFProDisplay-UltraLight.ttf
+
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
