--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,12 @@ flutter:
         - asset: fonts/SFProDisplay-Bold.ttf
         - asset: fonts/SFProDisplay-Heavy.ttf
         - asset: fonts/SFProDisplay-Light.ttf
+          weight: 300
         - asset: fonts/SFProDisplay-Medium.ttf
+          weight: 500
         - asset: fonts/SFProDisplay-Regular.ttf
         - asset: fonts/SFProDisplay-SemiBold.ttf
+          weight: 600
         - asset: fonts/SFProDisplay-Thin.ttf
         - asset: fonts/SFProDisplay-UltraLight.ttf
 
