--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   synchronized: ^2.1.0+1
   http: ^0.12.0+2
   intl: ^0.16.0
+  swipedetector: ^1.2.0
 
 dev_dependencies:
   flutter_test:
