--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.12.0+2
   intl: ^0.16.0
   swipedetector: ^1.2.0
+  photo_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
